Correct spacing on project items

--- a/src/styles/sections/_projects.mobile.scss
+++ b/src/styles/sections/_projects.mobile.scss
@@ -7,8 +7,8 @@
   }
 }
 
-.project-card {
-  margin-bottom: 1em;
+.project.card {
+  margin-bottom: 1.5em;
 }
 }
 }
